test/tests/compiler/5_local_variables/valid/extra_credit/compound_multiply.plx
pub fn main(none) i32 {
    to_multiply: i32 = 4
    to_multiply *= 3
    return to_multiply
}
