test/tests/compiler/5_local_variables/invalid_parse/declare_keyword_as_var.plx
pub fn main(none) i32 {
    return: i32 = 4
    return return + 1
}
